# N.E.K.O

./: .gitignore  README.MD  pyproject.toml  requirements.txt
.github/: CODEOWNERS
app/: main_server.py  monitor.py
brain/: browser_use_adapter.py  computer_use.py  deduper.py  openclaw_adapter.py  openfang_adapter.py  task_executor.py
config/: __init__.py  api_profiles.py  api_providers.json  character_defaults.py  memory_settings.py  (+1 more)
plugin/plugins/neko_warthunder/: __init__.py  plugin.toml  pyproject.toml
plugin/plugins/neko_warthunder/adapters/: __init__.py  data_layer_process.py  event_labels.py  identity_client.py  neko_dispatcher.py  runtime_timeline.py  telemetry_client.py  text_safety.py
plugin/plugins/neko_warthunder/contract/: telemetry_sample.json
plugin/plugins/neko_warthunder/core/: __init__.py  arbiter.py  contracts.py  flag_codes.py  instructions.py  safety_guard.py  scenario.py
plugin/plugins/neko_warthunder/data_layer/data process/: vehicle_profile_identity_aliases.json  vehicle_profile_vetted_ids.json  vehicle_profiles.json  wt_capture.py  wt_events.py  wt_geo.py  wt_processor.py  wt_proximity.py  wt_recorder.py  wt_server.py  wt_telemetry.py
plugin/plugins/neko_warthunder/detectors/: __init__.py  _base.py
plugin/plugins/neko_warthunder/detectors/condition/: __init__.py  flight_safety.py
plugin/plugins/neko_warthunder/detectors/discrete/: __init__.py  free_text.py  lifecycle.py  notices.py  proximity.py  radio.py  situation.py
plugin/plugins/neko_warthunder/i18n/: zh-CN.json
plugin/plugins/neko_warthunder/ui/: panel.tsx
(+1274 files in other folders)
